--- a/root/css/style.css
+++ b/root/css/style.css
@@ -37,7 +37,25 @@ a:hover, a:active {
    	margin: 0 auto; 
 	background-color: #42413C;
 }
-
+header.topBar {
+    /*position: fixed;
+    top:0;*/
+    width: 100%;
+    height: 3em;
+    line-height: 3em; /* to vertically center text */
+    border-bottom: solid 1px #42413C;
+}
+.topBar img {
+	width: 15%;
+	height: 3em;
+	float: left;
+}
+header div {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
 header, footer {
 	background-color: #7bb8a5;
 }
