Completed Responsive Navigation Bar/ Hamburger icon for mobile

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -9,7 +9,6 @@ body {
 	background-color: #42413C;
     font: 14px/1.4 Verdana, sans-serif;
     color: #333;
-    
 }
 img {
     width: 100%;
@@ -25,21 +24,26 @@ h1, h2,  p {
 p {
 	padding-bottom:10px;
 }
-a:link, a:visited {
-	color: #0B486B;
-	text-decoration: underline; 
-}
-a:hover, a:active { 
+a {
+	color: #333;
 	text-decoration: none;
+}
+a:hover {
+	color: #666;
 }
 #wrapper {
     max-width: 960px;
    	margin: 0 auto; 
 	background-color: #42413C;
 }
+header > div {
+		width: 96%;
+		margin: auto;
+		display: flex;
+		justify-content: space-between;
+}
 header.topBar {
-    /*position: fixed;
-    top:0;*/
+    position: relative; /* need for hamburger */
     width: 100%;
     height: 3em;
     line-height: 3em; /* to vertically center text */
@@ -50,12 +54,10 @@ header.topBar {
 	height: 3em;
 	float: left;
 }
-header div {
-    width: 90%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
+header span {
+	max-width: 22%;
 }
+
 header, footer {
 	background-color: #7bb8a5;
 }
@@ -64,6 +66,59 @@ header h1 {
 	font-size: 62px;
     text-align: center; /* 1 column */
 }
+/* Navigation - Hamburger menu for mobile */
+nav.mainNav {
+	background-color: #ededed;
+}
+.mainNav ul {
+    list-style-type: none;
+
+}
+.mainNav li {
+    border-bottom: solid 1px #42413C;
+
+}
+.mainNav li a {
+    display: block;
+    padding: 0 .4em;
+}
+
+#navigation nav {
+    height: 0;
+    overflow: hidden;
+}
+.active {
+	background-color: #9ed3c2;
+}
+   /* fixing problems on some browsers - tricking */
+body {
+    -webkit-animation: bugfix infinite 1s;
+}
+@-webkit-keyframes bugfix {
+    from { padding: 0;}
+    to { padding: 0;}
+}
+#navigation input[type=checkbox] {
+    position: absolute;
+    top: -999em;
+    left: -999em;  /* hide checkbox out of screen */
+}
+#navigation label {
+    display: block;
+    background: url("../images/nav-icon.png") no-repeat right center;
+    position: relative;
+    /*top: -10px; */    /* HAMBURGER ICON POSITION */
+    right: 10px;
+    text-indent: -999em;
+    cursor: pointer;
+    user-select: none;
+}
+
+#navigation input[type=checkbox]:checked ~ nav {
+    height: auto;
+	overflow: hidden;
+}
+/* End of Navigation */
 figcaption {
     font-style: italic;
     font-size: 10px;
@@ -92,9 +147,11 @@ aside h1 {
 }
 footer {
 	text-align: center;
-	padding: 10px 0;
+	height: 3em;
+    line-height: 3em;
 }
 @media screen and (min-width: 650px) {
+
     main#flexBox {
         display: flex;
         box-sizing: border-box;
@@ -109,5 +166,18 @@ footer {
     figcaption { text-align: right; padding: 0 15px; }
     header h1 { text-align: left; }
     aside h1 { margin-right: 50px; }
-      
+	nav.mainNav {
+	  background-color: #7bb8a5;
+     }
+	#navigation label {
+        display: none;
+    }
+    #navigation nav {
+        height: auto;
+        overflow: visible;
+    }
+    #navigation li {
+        display: inline-block;
+        border: none;
+    }
 }
