--- a/root/css/style.css
+++ b/root/css/style.css
@@ -54,9 +54,6 @@ header.topBar {
 	height: 3em;
 	float: left;
 }
-header span {
-	max-width: 22%;
-}
 
 header, footer {
 	background-color: #7bb8a5;
@@ -163,9 +160,19 @@ footer {
     #flexBox aside {
         flex: 1;
     }
-    figcaption { text-align: right; padding: 0 15px; }
-    header h1 { text-align: left; }
-    aside h1 { margin-right: 50px; }
+    figcaption {
+		text-align: right;
+		padding: 0 15px;
+	}
+    header h1 {
+		text-align: left;
+	}
+    aside h1 {
+		margin-right: 50px;
+	}
+	header span {
+		max-width: 22%;
+	}
 	nav.mainNav {
 	  background-color: #7bb8a5;
      }
